[package]
name = "grandstand-gauntlet"
version = "0.1.0"
authors = ["Olf EPAIN aka Wabtey <wabtey@disroot.org>", "Morgan Van Amerongen <vanamerongen.morgan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }
bevy-parallax = "0.3"
bevy_rapier2d = "0.20"
image = "0.24"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
